--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <title>React + Redux Firebase Simple Blog</title>
     <script src="https://kit.fontawesome.com/a50954a027.js" crossorigin="anonymous"></script>
 </head>
+<script async src="https://pay.google.com/gp/p/js/pay.js" onload​="onGooglePayLoaded()">
+</script>
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -23,7 +25,9 @@
             document.querySelector(".splash").style.display = "none";
         }, 4000)
     }
+
 </script> -->
+
 
 
 </html>
