--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>React + Redux Firebase Simple Blog</title>
+    <title>Quick Fire Traders</title>
     <script src="https://kit.fontawesome.com/a50954a027.js" crossorigin="anonymous"></script>
 
     <script async="async" data-cfasync="false" src="//pl17907728.highperformancecpmgate.com/1261e9e73efbf5a14f0b266c74ab6ca4/invoke.js"></script>
